--- a/styles/base.scss
+++ b/styles/base.scss
@@ -51,6 +51,7 @@
   --color-black: #000;
   --color-brown: #e3cdb1;
   --color-grey-text: #d0d0d0;
+  --color-medium-grey-text:#9B9B9B;
   --color-dark-grey-text: #5E5B69;
   --color-cream: #f7f1eb;
   --color-grey: #fafafa;
