--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -1,9 +1,13 @@
-.buttons {
+.bigbuttons {
+  border-radius: 3px;
   width: 191px;
   height: 42px;
+  display: block;
+  background: linear-gradient(to right, var(--color-brown) 50%, transparent 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
   border: 1px solid var(--color-brown);
-  background-color: transparent;
-  color: var(--color-brown);
 } 
 
 .buttons {
@@ -15,10 +19,25 @@
   background-size: 200% 100%;
   background-position: right bottom;
   transition: all 0.5s ease-out;
+  border: 1px solid var(--color-brown);
     
 }
-  
+
+.bigbuttons:hover,
 .buttons:hover {
   background-position: left bottom;
   color: white;
+}
+
+.buttonlayout {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
