--- a/styles/card.scss
+++ b/styles/card.scss
@@ -74,6 +74,5 @@
 .card > .content > .actions {
   display: flex;
   justify-content: space-between;
-  gap: var(--spacing);
   margin-top: var(--spacing);
 }
